--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_bloc: ^9.0.0
   freezed: ^2.5.7
   image_picker: ^1.1.2
+  shared_preferences: ^2.5.1
+  provider: ^6.1.2
+  local_auth: ^2.3.0
+  system_info2: ^4.0.0
 
 dev_dependencies:
   flutter_test:
